# encodes

./: .editorconfig  .flake8  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
patches/: fontvalidator-validate-all-tracks.patch  muxtools-sanitize-font-names.patch  muxtools-tags-utf8.patch  vsdeband-grain-post-process-type.patch
src/: scene-kernels.py
src/BadGirl/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  config.ini
src/BadGirl/badgirl_common/: __init__.py  common.py  sources.py
src/DEDEDEDE/: 00.py  01.py  02.py  03.py  04.py  05.py  config.ini
src/MysteriaFriends/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  config.ini  nced1.py  nced2.py
src/PonNoMichi/: 01.py  02.py  03.py  config.ini
src/StardustTelepath/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  config.ini
src/StardustTelepathBD/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  config.ini  nced.py  ncop.py
src/VexationsOfAShutInPrincess/: 01.py  config.ini
src/WhisperedWords/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  config.ini  nced.py  ncop.py
src/WorldDaiStar/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  config.ini  nced1.py  nced2.py  ncop.py
src/sgtfunc/: __init__.py  pyproject.toml  sgtfunc.py
src/sgtfunc/sgtfunc/: __init__.py  sgtfunc.py
