[project]
name = "encodes"
requires-python = ">=3.12"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "3.12.3"
vapoursynth = {version = "66", optional = true}

# pypi
pymediainfo = "6.1.0"
sox = "1.5.0"

# JET
lvsfunc = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/lvsfunc", rev = "dd21e138d0f03bf0667a9831844a5efe790cbbac"}
muxtools = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/muxtools", rev = "e5c7c2159f2a0fb13684f221e9bb404f5459c5bd"}
vsaa = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-aa", rev = "cdb04d598170943906925a1d4e9f28dbdc234d08"}
vsdeband = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-deband", rev = "30f033b4037380fc7adb7de3e3ac0349e3c26442"}
vsdehalo = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-dehalo", rev = "3cec4a7d569d91a2fd839a23609a9cb674fb79e0"}
vsdenoise = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-denoise", rev = "ff32b55dc7a0ad44be3988d1233a0e60d5c677d9"}
vsexprtools = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-exprtools", rev = "f8d028e56a19940ed6e4cdbf51446d804464676a"}
vskernels = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-kernels", rev = "73419b2399ce8e1d652bbf07d543245214d9d621"}
vsmasktools = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-masktools", rev = "06ae198edae6b9ab324c19770054377ad4f84338"}
vsmuxtools = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-muxtools", rev = "1f1d8cf5c3889fb8c01584725742bb203272d6d6"}
vspreview = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-preview", rev = "76d99b988d32616aff97bfd38d3f60fc110e353a"}
vsrgtools = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-rgtools", rev = "be5c6e6faf05eb86fef291c408aa6b85c590823e"}
vsscale = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-scale", rev = "69d0085f730f3580950f3e0f24b8a18da3d9e5b8"}
vssource = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-source", rev = "ebad21823a416b94437cce00434287eeb3337630"}
vstools = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-tools", rev = "67d83409a326f202b6bf36393c6e35e8a46de3db"}

# misc
awsmfunc = {git = "https://github.com/OpusGang/awsmfunc", rev = "77c01e914be5ba37fb2e08bf53e47f73649cffdf"}
jvsfunc = {git = "https://github.com/dnjulek/jvsfunc", rev = "0200b4fe464557fb62ea1abdc04e6851b683bf2e"}
stgpytools = {git = "https://github.com/Setsugennoao/stgpytools", rev = "8ee84a47ec605695ab2e765518b3b743907bed74"}
vodesfunc = {git = "https://github.com/Vodes/vodesfunc", rev = "2e449300640f3f3c0461c6a07922bb34a213506e"}
vs-rekt = {git = "https://github.com/OpusGang/rekt", rev = "37df56203c7d39c0aa5a9bcb15251dc06a7704ee"}

# For muxtools patch to sanitize font names.
pathvalidate = "3.2.0"

# local
sgtfunc = {path = "src/sgtfunc", develop = true}

[tool.poetry.group.dev.dependencies]
mypy = "1.10.0"
ruff = "0.4.3"

fontvalidator = {git = "https://github.com/Funami580/Myaamori-Aegisub-Scripts", branch = "fix_mkv_mimetype_comparison", rev = "98f629a23837d3fb8de1aeddea3541d8d13be614", subdirectory = "scripts/fontvalidator"}
getfscaler = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/getfscaler", rev = "7cd966d8ed7dae7a7134be9e55190c71ed0de9dd"}
getnative = {git = "https://github.com/Infiziert90/getnative", rev = "720c3953d7668d0d5daf8abf827d63b3936d6d2b"}
getnativef = {git = "https://github.com/Vodes/getnativef", rev = "7038fed0737287f2bd32580ef549f6facb4932bf"}

# dependencies of vspreview plugins
scipy = "1.13.0"

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true

disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true

no_implicit_optional = true

show_error_context = false
show_column_numbers = true
color_output = true
error_summary = true
pretty = true

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",  # Missing type annotation for `self` in method (deprecated)
    "C901",    # `x` is too complex
    "COM812",  # Trailing comma missing
    "D",       # pydocstyle
    "E501",    # Line too long
    "EM",      # flake8-errmsg
    "ERA001",  # Found commented-out code
    "INP001",  # File `x` is part of an implicit namespace package. Add an `__init__.py`.
    "ISC001",  # Implicitly concatenated string literals on one line
    "PLR0913", # Too many arguments in function definition
    "PLR2004", # Magic value used in comparison
    "S101",    # Use of `assert` detected
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "T201",    # `print` found
    "TCH003",  # Move standard library import `...` into a type-checking block
    "TD002",   # Missing author in TODO.
    "TD003",   # Missing issue link on the line following this TODO.
    "TRY003",  # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.isort]
known-first-party = ["sgtfunc"]

[tool.ruff.lint.per-file-ignores]
"src/MysteriaFriends/*.py" = ["FBT003"]
"src/WhisperedWords/*.py" = ["FBT003"]
"__init__.py" = ["F401"]
