[project]
name = "encodes"
requires-python = ">=3.12"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "3.12.3"
vapoursynth = {version = "68", optional = true}

# pypi
pymediainfo = "6.1.0"
sox = "1.5.0"

# JET
lvsfunc = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/lvsfunc", rev = "9d409754a3dcfa3a5d7c094f11ae951b24e572d7"}
muxtools = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/muxtools", rev = "fc2cea3565b037b550b2d181b48aaa73c3e0b67a"}
vsaa = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-aa", rev = "60c403670abaf079239616ad3d1acd347079590b"}
vsdeband = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-deband", rev = "267c02bf9815bc3611f6fa1ef7fe3ecf23c4312f"}
vsdehalo = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-dehalo", rev = "25868fb90517ffc53774719d138732edcad7eccf"}
vsdenoise = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-denoise", rev = "523681ed8326b04d716bb8acead26e0ce078d957"}
vsexprtools = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-exprtools", rev = "3f1983d3877e130cebd8c255f642d39f7b4c095a"}
vskernels = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-kernels", rev = "e7a52925ae83a734509f161275f646b8307a9e52"}
vsmasktools = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-masktools", rev = "07dacc3e784889c86a528403061173fe0201cfa6"}
vsmuxtools = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-muxtools", rev = "1f1d8cf5c3889fb8c01584725742bb203272d6d6"}
vspreview = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-preview", rev = "8210f0b0e2de6147467d4450de68b1d2fb9996dc"}
vsrgtools = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-rgtools", rev = "9156d1936ba4f18f7223871a04645de45d1e6a2b"}
vsscale = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-scale", rev = "8ad6b2f5e7c8af48beb7cf0d244f22bcb1c91346"}
vssource = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-source", rev = "2373331255014a66f4c046aa7c7605bf78005f1c"}
vstools = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-tools", rev = "8a88bd35d5c65b53d5e2d275eb1560925f7784c2"}

# misc
awsmfunc = {git = "https://github.com/OpusGang/awsmfunc", rev = "e1290f799162749fc627951290bfb4089f2f39cb"}
jvsfunc = {git = "https://github.com/dnjulek/jvsfunc", rev = "0200b4fe464557fb62ea1abdc04e6851b683bf2e"}
stgpytools = {git = "https://github.com/Setsugennoao/stgpytools", rev = "0e6b247e2381edf5fdab470e5d8116544b6f3bcd"}
vodesfunc = {git = "https://github.com/Vodes/vodesfunc", rev = "464f93d99fa435a5e345144edc1c5d5c26dd7b90"}
vs-rekt = {git = "https://github.com/OpusGang/rekt", rev = "37df56203c7d39c0aa5a9bcb15251dc06a7704ee"}

# For muxtools patch to sanitize font names.
pathvalidate = "3.2.0"

# local
sgtfunc = {path = "src/sgtfunc", develop = true}

[tool.poetry.group.dev.dependencies]
mypy = "1.10.1"
ruff = "0.5.0"

fontvalidator = {git = "https://github.com/Funami580/Myaamori-Aegisub-Scripts", branch = "fix_mkv_mimetype_comparison", rev = "98f629a23837d3fb8de1aeddea3541d8d13be614", subdirectory = "scripts/fontvalidator"}
getfscaler = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/getfscaler", rev = "1c319ff5c52214e11e9bd7723679a6b37a2c94d7"}
getnative = {git = "https://github.com/Infiziert90/getnative", rev = "720c3953d7668d0d5daf8abf827d63b3936d6d2b"}
getnativef = {git = "https://github.com/Vodes/getnativef", rev = "7038fed0737287f2bd32580ef549f6facb4932bf"}

# dependencies of vspreview plugins
scipy = "1.14.0"

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true

disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true

no_implicit_optional = true

show_error_context = false
show_column_numbers = true
color_output = true
error_summary = true
pretty = true

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",  # Missing type annotation for `self` in method (deprecated)
    "C901",    # `x` is too complex
    "COM812",  # Trailing comma missing
    "D",       # pydocstyle
    "E501",    # Line too long
    "EM",      # flake8-errmsg
    "ERA001",  # Found commented-out code
    "INP001",  # File `x` is part of an implicit namespace package. Add an `__init__.py`.
    "ISC001",  # Implicitly concatenated string literals on one line
    "PLR0913", # Too many arguments in function definition
    "PLR2004", # Magic value used in comparison
    "S101",    # Use of `assert` detected
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "T201",    # `print` found
    "TCH003",  # Move standard library import `...` into a type-checking block
    "TD002",   # Missing author in TODO.
    "TD003",   # Missing issue link on the line following this TODO.
    "TRY003",  # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.isort]
known-first-party = ["sgtfunc", "dededede_common"]

[tool.ruff.lint.per-file-ignores]
"src/MysteriaFriends/*.py" = ["FBT003"]
"src/WhisperedWords/*.py" = ["FBT003"]
"__init__.py" = ["F401"]
