[project]
name = "encodes"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "vapoursynth==72",

    "pymediainfo==7.0.1",
    "sox==1.5.0",

    # JET
    "lvsfunc==0.8.5",
    "muxtools==0.3.0",
    "vsmuxtools==0.3.0",
    "vsjetpack==0.4.0",
    "vspreview==0.14.0",

    # misc
    "awsmfunc",
    "stgpytools",
    "vodesfunc==1.8.4",
    "vs-colorfix",
    "vs-rekt",

    # local
    "sgtfunc"
]

[dependency-groups]
dev = [
    "mypy==1.16.1",
    "ruff==0.12.1",

    "fontvalidator",
    "getfscaler",
    "getnative",

    # dependencies of vspreview plugins
    "opencv-python==4.11.0.86",
    "scipy==1.16.0",
]

[tool.uv]
package = false

[tool.uv.sources]
# misc
awsmfunc = {git = "https://github.com/OpusGang/awsmfunc", rev = "e6987f7c7a412712ad1ecbd073b433b8529a3209"}
vs-colorfix = { git = "https://github.com/pifroggi/vs_colorfix.git" }
vs-rekt = {git = "https://github.com/OpusGang/rekt", rev = "37df56203c7d39c0aa5a9bcb15251dc06a7704ee"}

# local
sgtfunc = {path = "src/sgtfunc", editable = true}

# dev
fontvalidator = {git = "https://github.com/Funami580/Myaamori-Aegisub-Scripts", branch = "fix_mkv_mimetype_comparison", subdirectory = "scripts/fontvalidator"}
getfscaler = {git = "https://github.com/Jaded-Encoding-Thaumaturgy/getfscaler", rev = "4a62bad3091bf9c9611423572d262fe2f0da4a7a"}
getnative = {git = "https://github.com/Infiziert90/getnative", rev = "720c3953d7668d0d5daf8abf827d63b3936d6d2b"}
getnativef = {git = "https://github.com/Vodes/getnativef", rev = "7038fed0737287f2bd32580ef549f6facb4932bf"}

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true

disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_unreachable = true
show_error_codes = true

no_implicit_optional = true

show_error_context = false
show_column_numbers = true
color_output = true
error_summary = true
pretty = true

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",  # Missing type annotation for `self` in method (deprecated)
    "C901",    # `x` is too complex
    "COM812",  # Trailing comma missing
    "D",       # pydocstyle
    "E501",    # Line too long
    "EM",      # flake8-errmsg
    "ERA001",  # Found commented-out code
    "INP001",  # File `x` is part of an implicit namespace package. Add an `__init__.py`.
    "ISC001",  # Implicitly concatenated string literals on one line
    "PLR0913", # Too many arguments in function definition
    "PLR2004", # Magic value used in comparison
    "S101",    # Use of `assert` detected
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "T201",    # `print` found
    "TCH003",  # Move standard library import `...` into a type-checking block
    "TD002",   # Missing author in TODO.
    "TD003",   # Missing issue link on the line following this TODO.
    "TRY003",  # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.isort]
known-first-party = ["sgtfunc", "badgirl_common", "dededede_common", "witchandbeast_common", "yozakura_common"]

[tool.ruff.lint.per-file-ignores]
"src/MysteriaFriends/*.py" = ["FBT003"]
"src/WhisperedWords/*.py" = ["FBT003"]
"__init__.py" = ["F401"]
