[project]
name = "sgtfunc"
version = "0.0.0+local"
description = ""
authors = []
classifiers = ["License :: OSI Approved :: GNU General Public License v3 (GPLv3)"]
requires-python = ">=3.11"
dependencies = [
    "muxtools>=0.3.0",
    "vsjetpack>=0.4.0",
]

[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"
